@@ -678,7 +678,7 @@ int actcBeginOutput(ACTCData *tc)
     chartedSetLabel("vertex bins");
     tc->VertexBins = (ACTCVertex **)calloc(sizeof(ACTCVertex *), tc->CurMaxVertValence + 1);
     if(tc->VertexBins == NULL) {
-	ACTC_DEBUG(fprintf(stderr, "actcBeginOutput: couldn't allocate %u bytes for Vertex Bins\n",
+	ACTC_DEBUG(fprintf(stderr, "actcBeginOutput: couldn't allocate %lu bytes for Vertex Bins\n",
                            sizeof(ACTCVertex *) * tc->CurMaxVertValence);)
 	return tc->Error = ACTC_ALLOC_FAILED;
     }
@@ -753,7 +753,7 @@ ACTCData *actcNew(void)
     tc = (ACTCData *)calloc(sizeof(*tc), 1);
 
     if(tc == NULL) {
-	ACTC_DEBUG(fprintf(stderr, "actcNew: couldn't allocate %u bytes for new ACTCData\n", sizeof(*tc));)
+	ACTC_DEBUG(fprintf(stderr, "actcNew: couldn't allocate %lu bytes for new ACTCData\n", sizeof(*tc));)
 	return NULL;
     }
 
@@ -806,6 +806,7 @@ static size_t allocatedForVertices(ACTCData *tc)
 	        size += allocatedForEdges(v);
 	}
     } else {
+        size = 0;
 	for(i = 0; i < tc->VertexCount; i++) {
 	    tableIterate(tc->Vertices, tc->VertexIterator, NULL, (void **)&v);
 	    size += allocatedForEdges(v);
@@ -993,7 +994,7 @@ static int mapEdgeTriangle(ACTCData *tc, ACTCEdge *edge, ACTCVertex *v3)
     r = reallocAndAppend((void **)&edge->Triangles, &edge->TriangleCount,
         sizeof(tmp), &tmp);
     if(r == NULL) {
-	ACTC_DEBUG(fprintf(stderr, "ACTC::mapEdgeTriangle: Couldn't allocate %u bytes for triangles\n",
+	ACTC_DEBUG(fprintf(stderr, "ACTC::mapEdgeTriangle: Couldn't allocate %lu bytes for triangles\n",
                            sizeof(tmp) * (edge->TriangleCount + 1));)
 	return tc->Error = ACTC_ALLOC_FAILED;
     }
@@ -1046,7 +1047,7 @@ static int mapVertexEdge(ACTCData *tc, ACTCVertex *v1, ACTCVertex *v2, ACTCEdge 
 	r = reallocAndAppend((void **)&v1->Edges, &v1->EdgeCount,
 	    sizeof(tmp), &tmp);
 	if(r == NULL) {
-	    ACTC_DEBUG(fprintf(stderr, "ACTC::mapVertexEdge: Couldn't reallocate to %u bytes for vertex's edge list\n",
+	    ACTC_DEBUG(fprintf(stderr, "ACTC::mapVertexEdge: Couldn't reallocate to %lu bytes for vertex's edge list\n",
                                sizeof(tmp) * v1->EdgeCount);)
 	    return tc->Error = ACTC_ALLOC_FAILED;
 	}
